--- a/Index.html
+++ b/Index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/Estilo.css">
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="Javascript/API.js"></script>
-    <script src="Javascript/redirect.js"></script>
-    <script src="Javascript/DATA.JSON"></script>
-    <script src="Javascript/contratoABI.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.10.0/web3.min.js"></script>
+   
+    <link rel="icon" type="image/x-icon" href="imagem/RAM.jpg">
+    <meta name="description" content="RAM CEO - Plataforma de pagamento com tokens RAM">
+    <meta name="keywords" content="RAM, CEO, Crypto, Token, Pagamento">
+    <meta name="author" content="RAM CEO">
+    <meta name="robots" content="index, follow">
     <title>RAM CEO - Pagamento</title>
 </head>
 <body>
     <div id="top-container">
-        <button id="connect-wallet-btn">Conectar Carteira</button>
+        <button id="connect-wallet-btn" data-connected="false" aria-label="Conectar carteira">Conectar Carteira</button>
     </div>
 
     <div id="center-container">
-        <label id="dynamic-label">RAM TOKEN: 
+        <label id="dynamic-label" for="ram-balance">RAM TOKEN: 
             <span id="ram-balance">0</span>
         </label>
-        <img id="right-image" src="/imagem/RAM.jpg" alt="Logo RAM CEO">
-        <button id="center-bottom-btn">Pagar 1500 RAM TOKEN</button>
+        <img id="right-image" src="imagem/RAM.jpg" alt="Logo RAM CEO" width="200" height="200" loading="lazy">
+        <button id="center-bottom-btn" aria-label="Pagar tokens">Pagar 1500 RAM TOKEN</button>
     </div>
+
+    <audio id="ovelha-sound" src="sons/ovelha.mp3" preload="auto"></audio>
+    
     <script src="Javascript/Payment.js"></script>
     <script src="Javascript/soliciteConnect.js"></script>
 </body>
