--- a/Index.html
+++ b/Index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/Estilo.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.10.0/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
    
     <link rel="icon" type="image/x-icon" href="imagem/RAM.jpg">
     <meta name="description" content="RAM CEO - Plataforma de pagamento com tokens RAM">
     <meta name="keywords" content="RAM, CEO, Crypto, Token, Pagamento">
     <meta name="author" content="RAM CEO">
     <meta name="robots" content="index, follow">
+    <script src="Javascript/Animate.js"></script>
     <title>RAM CEO - Pagamento</title>
 </head>
 <body>
@@ -28,7 +29,8 @@
 
     <audio id="ovelha-sound" src="sons/ovelha.mp3" preload="auto"></audio>
     
-    <script src="Javascript/Payment.js"></script>
+    <script src="Payment.js"></script>
     <script src="Javascript/soliciteConnect.js"></script>
+    <div id="gas-estimate" class="gas-info"></div>
 </body>
 </html>
