--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Css/Estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
    
@@ -15,22 +16,35 @@
     <title>RAM CEO - Pagamento</title>
 </head>
 <body>
-    <div id="top-container">
-        <button id="connect-wallet-btn" data-connected="false" aria-label="Conectar carteira">Conectar Carteira</button>
-    </div>
+    <div class="container-fluid p-0">
+        <div id="top-container" class="row m-0">
+            <div class="col-12 d-flex justify-content-end">
+                <button id="connect-wallet-btn" data-connected="false" data-action="connect" aria-label="Conectar carteira">
+                    Connect 
+                </button>
+            </div>
+        </div>
 
-    <div id="center-container">
-        <label id="dynamic-label" for="ram-balance">RAM TOKEN: 
-            <span id="ram-balance">0</span>
-        </label>
-        <img id="right-image" src="imagem/RAM.jpg" alt="Logo RAM CEO" width="200" height="200" loading="lazy">
-        <button id="center-bottom-btn" aria-label="Pagar tokens">Pagar 1500 RAM TOKEN</button>
+        <div id="center-container" class="row m-0">
+            <div class="col-12 d-flex justify-content-center align-items-center">
+                <div class="token-card">
+                    <div class="token-info">
+                        <div class="token-circle">
+                            <img src="imagem/RAM.jpg" alt="Logo RAM CEO" class="token-logo">
+                        </div>
+                        <label id="dynamic-label"><span id="ram-balance">0</span></label>
+                    </div>
+                    <button id="payment-btn" aria-label="Pagar tokens">BT_pagamento aqui</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <audio id="ovelha-sound" src="sons/ovelha.mp3" preload="auto"></audio>
     
     <script src="Payment.js"></script>
     <script src="Javascript/soliciteConnect.js"></script>
-    <div id="gas-estimate" class="gas-info"></div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
