--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="RAM CEO">
     <meta name="robots" content="index, follow">
     <script src="Javascript/Animate.js"></script>
-    <title>RAM CEO - Pagamento</title>
+    <title>RAM CEO - Payment</title>
 </head>
 <body>
     <div class="container-fluid p-0">
@@ -34,7 +34,7 @@
                         </div>
                         <label id="dynamic-label"><span id="ram-balance">0</span></label>
                     </div>
-                    <button id="payment-btn" aria-label="Pagar tokens">BT_pagamento aqui</button>
+                    <button id="payment-btn" aria-label="Pagar tokens">Pay 1500 $RAM</button>
                 </div>
             </div>
         </div>
