--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
 
     <audio id="ovelha-sound" src="sons/ovelha.mp3" preload="auto"></audio>
     
-    <script src="Payment.js"></script>
+    <script src="Javascript/Payment.js"></script>
     <script src="Javascript/soliciteConnect.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
