--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,8 @@
     <!-- Recursos pré-carregados -->
     <audio id="ovelha-sound" src="sons/ovelha.mp3" preload="auto"></audio>
     
-    <!-- Scripts na ordem correta de dependência -->
+    <!-- Scripts na ordem correta -->
+    <script src="Javascript/config.js"></script>
     <script src="Javascript/soliciteConnect.js"></script>
     <script src="Javascript/Payment.js"></script>
     
