--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="RAM CEO">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta property="og:title" content="RAM CEO - Plataforma de Pagamento">
-    <meta property="og:description" content="Pague se acesso com tokens $RAM.">
+    <meta property="og:description" content="Pague agora com tokens $RAM para ter acesso a plataforma de transparência completa.">
     <meta property="og:image" content="imagem/RAM.jpg">
     <meta property="og:url" content="https://ramceo.fun">
     <meta property="og:type" content="website">
