--- a/Index.html
+++ b/Index.html
@@ -11,18 +11,18 @@
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta property="og:title" content="RAM CEO - Plataforma de Pagamento">
     <meta property="og:description" content="Pague agora com tokens $RAM para ter acesso a plataforma de transparência completa.">
-    <meta property="og:image" content="imagem/RAM.jpg">
+    <meta property="og:image" content="https://ramceoimage.netlify.app/image/C_logo.png">
     <meta property="og:url" content="https://ramceo.fun">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="RAM CEO">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="RAM CEO - Pagamentos com Token">
     <meta name="twitter:description" content="Plataforma de pagamento segura usando tokens RAM. Rápido, fácil e descentralizado.">
-    <meta name="twitter:image" content="imagem/RAM.jpg">
+    <meta name="twitter:image" content="https://ramceoimage.netlify.app/image/C_logo.png">
     <link rel="canonical" href="https://ramceo.fun">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="imagem/RAM.jpg">
+    <link rel="icon" type="image/x-icon" href="https://ramceoimage.netlify.app/image/C_logo.png">
     
     <!-- Dependências essenciais primeiro -->
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
