--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="RAM CEO">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta property="og:title" content="RAM CEO - Plataforma de Pagamento">
-    <meta property="og:description" content="Pague agora com tokens $RAM para ter acesso a plataforma de transparência completa.">
+    <meta property="og:description" content="Realize o pagamento agora com tokens $RAM para obter acesso total à nossa plataforma de transparência.">
     <meta property="og:image" content="https://ramceoimage.netlify.app/image/C_logo.png">
     <meta property="og:url" content="https://ramceo.fun">
     <meta property="og:type" content="website">
